--- a/app/views/layouts/schedules_show_layout.ejs
+++ b/app/views/layouts/schedules_show_layout.ejs
@@ -3,8 +3,7 @@
     <head>
         <title><%= title %></title>
         <%- stylesheetLinkTag('bootstrap', 'application', 'bootstrap-responsive', 'base', 'http://fonts.googleapis.com/css?family=Open+Sans') %>
-        <%- javascriptIncludeTag('http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js', 'bootstrap', 'rails', 'application', 'base') %>
-
+        <%- javascriptIncludeTag('http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js', 'bootstrap', 'rails', 'application', 'base', 'http://code.jquery.com/ui/1.10.3/jquery-ui.js') %>
         <%- csrfMetaTag() %>
     </head>
     <body>
