started on selectionView

--- a/app/views/schedules/show.ejs
+++ b/app/views/schedules/show.ejs
@@ -21,9 +21,9 @@
       <div class="span4" id="sidenav">
        <div class="searchbar">
         <form class="navbar-form pull-left">
-            <input type="department" id="searchform" class="span2" style="margin-top:0">
-            <input type="courseno" id="searchform" class="span1" style="margin-top:0">
-            <button type="submit" id="searchbtn" class="btn" style="margin-left:0" onclick="return doQuery('professor:ord')">Submit</button>
+            <input type="text" id="coursebox" class="span2" style="margin-top:0">
+            <input type="text" id="numbox" class="span1" style="margin-top:0">
+            <button type="submit" id="searchbtn" class="btn" style="margin-left:0" onclick="return doQuery()">Submit</button>
         </form>
         <div class="results">
         </div>
